2009-09-29  Alexey Proskuryakov  <ap@apple.com>

        Rubber-stamped by Brady Eidson.

        Assertion failure in http/tests/xmlhttprequest/failed-auth.html.

        I couldn't find out why this only started to happen now, but it was incorrect to check
        persistence of a credential returned by CredentialStorage::get() without checking that it
        was non-null. When there is no credential for the protection space in storage, get()
        returns a new object, and Credentil constructor doesn't initialize m_persistence.

        * platform/network/mac/ResourceHandleMac.mm:
        (-[WebCoreSynchronousLoader connection:didReceiveAuthenticationChallenge:]): Moved the
        assertion after credential null check.
        (WebCore::ResourceHandle::didReceiveAuthenticationChallenge): Added the same persistence
        assertion, matching sync code (and CF one, as well).

2009-09-29  Yong Li  <yong.li@torchmobile.com>

        Reviewed by Darin Adler.

        Add an ASSERT for UTF8Encoding().isValid()
        https://bugs.webkit.org/show_bug.cgi?id=29908

        * platform/text/TextEncoding.cpp:
        (WebCore::UTF8Encoding):

2009-09-29  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Jon Honeycutt.

        https://bugs.webkit.org/show_bug.cgi?id=29892
        Add support for whitelist patterns to control conditional injection of user scripts and
        user stylesheets.

        No new tests. Not testable until WebKit portion is added in followup patch.

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * dom/Document.cpp:
        (WebCore::Document::pageGroupUserSheets):
        * page/Frame.cpp:
        (WebCore::Frame::injectUserScriptsForWorld):
        * page/UserContentURLPattern.cpp: Added.
        (WebCore::UserContentURLPattern::matchesPatterns):
        (WebCore::UserContentURLPattern::parse):